fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 a {
   color: unset;
   text-decoration: none;
